<resources>
    <string name="app_name">Pornography  Crisis Support</string>
    <string name="app_contact_email">info@discoverandchange.com</string>
    <string name="navigation_drawer_main_menu">Main Menu</string>
    <string name="title_activity_nav_drawer_example">NavDrawerExample</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_support_network">Support Network</string>
    <string name="action_quiz">Take Quiz</string>
    <string name="action_library">Resource Library</string>
    <string name="action_quiz_history">Quiz History</string>
    <string name="action_quiz_history_sub">Sorted by Most Recent</string>
    <string name="library_controller_title">Library Stub</string>
    <string name="library_items">Library Items</string>
    <string name="quiz_controller_contact_network_notified">Your contact network has been notified.</string>
    <string name="quiz_controller_instructions">Rate your cravings</string>
    <string name="quiz_controller_go">Go</string>
    <string name="quiz_Date">Date</string>
    <string name="quiz_Score">Score</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string name="default_crisis_message">I\'m really struggling with cravings right now.  Please help me!</string>
    <string name="contact_add_invalid">We could not add your contact. The contact you chose does not have a valid phone number.</string>
    <string name="contact_add_invalid_title">Invalid Contact</string>
    <string name="contact_app_missing_title">Contact App Missing</string>
    <string name="contact_app_missing">There is no contacts app installed for us to pick a contact from.  Please install one.</string>
    <string name="craving_score">Latest Craving Score: </string>
    <string name="settings_setup_inspirational_quote_button">Setup Inspirational Quote</string>
    <string name="settings_setup_meaningful_picture_button">Setup Meaningful Picture</string>
    <string name="settings_inspirational_quote_title">Inspirational Quote Settings</string>
    <string name="inspirational_quote_missing_title">Quote text is missing</string>
    <string name="inspirational_quote_missing">The inspirational quote cannot be empty to save. Please enter in a message to save.</string>
    <string name="settings_inspirational_quote_instructions">Enter an inspirational quote that you will see in your library when you need help.</string>
    <string name="inspirational_quote_title">Inspirational Quote</string>
    <string name="meaningful_picture_title">Meaningful Picture</string>
    <string name="add_widget">Add widget</string>
    <string name="widget_title">Get help\nnow</string>
    <string name="quiz_score_range_mild">Mild</string>
    <string name="quiz_score_range_moderate">Moderate</string>
    <string name="quiz_score_range_severe">Severe</string>
    <string name="picture_app_missing_title">Picture application missing</string>
    <string name="picture_app_missing">No application could be found that can open a picture.  Please install one before continuing.</string>
    <string name="meaningfulPictureSettingsNoImage">No Image Currently Set</string>
    <string name="meaningful_picture_image_not_found">Error: Could not load picture.</string>
    <string name="audio_controller_play_error_title">Error playing resource</string>
    <string name="audio_controller_play_error">There was an error in playing or loading your resource. Please try again.</string>
    <string name="library_controller_no_network_title">Network Error</string>
    <string name="library_controller_no_network">We could not contact the library network.  Please verify your internet connection is working and turned on. Would you like to try loading your resources again?</string>
    <string name="activity_test_message">Send</string>
    <string name="username_prompt">Enter your name. It will be added to the message sent to your crisis contact</string>
    <string name="settings_reset_app_data">Reset app settings</string>
</resources>
