<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_support_network"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/action_support_network"/>
        <item
            android:id="@+id/nav_quiz"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/action_quiz"/>
        <item
            android:id="@+id/nav_library"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/action_library"/>
        <item
            android:id="@+id/nav_quiz_history"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/action_quiz_history"/>
    </group>
</menu>
