<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".library.controllers.LibraryController">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/craving_score"
        android:id="@+id/latestCravingScore"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=""
        android:id="@+id/latestScore"
        android:layout_above="@+id/libraryContactNetworkNotifiedMessage"
        android:layout_alignRight="@+id/libraryContactNetworkNotifiedMessage"
        android:layout_alignEnd="@+id/libraryContactNetworkNotifiedMessage"
        android:layout_toRightOf="@+id/textView7"
        android:layout_toEndOf="@+id/textView7"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/quiz_controller_contact_network_notified"
        android:id="@+id/libraryContactNetworkNotifiedMessage"
        android:layout_below="@+id/latestCravingScore"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/library_items"
        android:id="@+id/textView7"
        android:layout_below="@+id/libraryContactNetworkNotifiedMessage"
        android:layout_centerHorizontal="true"/>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/libraryListView"
        android:layout_below="@+id/textView7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

</RelativeLayout>
